Tue Oct 31 00:02:19 GMT 2006  Olly Betts <olly@survex.com>

	* htmlparsetest.cc,omindex.cc: Fix GCC warnings.

Mon Oct 30 23:57:09 GMT 2006  Olly Betts <olly@survex.com>

	* query.cc: $substr where the start is negative and longer than the
	  string (e.g. $substr{abcd,-5,1}) should now work as intended.

Mon Oct 30 21:02:18 GMT 2006  Olly Betts <olly@survex.com>

	* scriptindex.cc: Fix GCC warnings uncovered by actually substituting
	  AM_CXXFLAGS.

Mon Oct 30 21:01:26 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac: Actually substitute AM_CXXFLAGS in the Makefile.
	* configure.ac: Fix AM_CXXFLAGS for IRIX.

Sat Oct 28 12:31:31 BST 2006  Olly Betts <olly@survex.com>

	* myhtmlparse.cc: Add missing "#include <ctype.h>".

Sat Oct 28 02:23:09 BST 2006  Olly Betts <olly@survex.com>

	* htmlparse.cc,indextext.cc,indextext.h,myhtmlparse.cc,omega.cc,
	  omega.h,omindex.cc,query.cc,scriptindex.cc: Ensure that we always
	  pass an unsigned char value to isupper(), toupper(), etc as they
	  are undefined on other values (glibc makes them work for signed
	  char values too, but this is an extension).

Fri Oct 27 00:36:34 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac,md5.h,values.h: HAVE_STDINT_H is already defined
	  by autoconf based on trying the C compiler with AC_CHECK_HEADERS
	  so define HAVE_WORKING_STDINT_H instead.

Wed Oct 25 01:36:43 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Need a more sophisticated test for the stdint.h
	  problem on IRIX.

Tue Oct 24 02:12:13 BST 2006  Olly Betts <olly@survex.com>

	* metaxmlparse.cc,omega.h: Fix warnings from SGI's C++ compiler.

Tue Oct 24 02:11:11 BST 2006  Olly Betts <olly@survex.com>

	* htmlparse.cc,query.cc,scriptindex.cc: Remove unused static
	  functions.

Tue Oct 24 01:51:05 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Pass magic options to SGI's C++ compiler to allow
	  linking of templates to work.

Tue Oct 24 00:46:06 BST 2006  Olly Betts <olly@survex.com>
